tests/sqlcmd/baselines/errors/remove_classes4.errbaseline
Invalid class selector: 'sqlcmdtest.InsertEmployee foo'
